@@ -136,11 +136,11 @@ public:
 
 
 	//! Returns the value of an attribute as integer.
-	virtual int getAttributeValueAsInt(const char_type* name) const _IRR_OVERRIDE_
+	virtual int getAttributeValueAsInt(const char_type* name, int defaultNotFound) const _IRR_OVERRIDE_
 	{
 		const SAttribute* attr = getAttributeByName(name);
 		if (!attr)
-			return 0;
+			return defaultNotFound;
 
 		core::stringc c(attr->Value.c_str());
 		return core::strtol10(c.c_str());
@@ -148,11 +148,11 @@ public:
 
 
 	//! Returns the value of an attribute as integer.
-	virtual int getAttributeValueAsInt(int idx) const _IRR_OVERRIDE_
+	virtual int getAttributeValueAsInt(int idx, int defaultNotFound) const _IRR_OVERRIDE_
 	{
 		const char_type* attrvalue = getAttributeValue(idx);
 		if (!attrvalue)
-			return 0;
+			return defaultNotFound;
 
 		core::stringc c(attrvalue);
 		return core::strtol10(c.c_str());
@@ -160,11 +160,11 @@ public:
 
 
 	//! Returns the value of an attribute as float.
-	virtual float getAttributeValueAsFloat(const char_type* name) const _IRR_OVERRIDE_
+	virtual float getAttributeValueAsFloat(const char_type* name, float defaultNotFound) const _IRR_OVERRIDE_
 	{
 		const SAttribute* attr = getAttributeByName(name);
 		if (!attr)
-			return 0;
+			return defaultNotFound;
 
 		core::stringc c = attr->Value.c_str();
 		return core::fast_atof(c.c_str());
@@ -172,11 +172,11 @@ public:
 
 
 	//! Returns the value of an attribute as float.
-	virtual float getAttributeValueAsFloat(int idx) const _IRR_OVERRIDE_
+	virtual float getAttributeValueAsFloat(int idx, float defaultNotFound) const _IRR_OVERRIDE_
 	{
 		const char_type* attrvalue = getAttributeValue(idx);
 		if (!attrvalue)
-			return 0;
+			return defaultNotFound;
 
 		core::stringc c = attrvalue;
 		return core::fast_atof(c.c_str());
